testimonials slider overflow fix

--- a/styles/blocks/_testimonials.scss
+++ b/styles/blocks/_testimonials.scss
@@ -14,13 +14,16 @@
     &__slider {
 
         --testimonialsSliderSlideWidth: 606px;
+        overflow: hidden;
 
         &-list {
             display: flex;
             column-gap: 50px;
             scroll-snap-type: x mandatory;
             overflow-x: scroll;
-            margin-left: calc(var(--testimonialsSliderSlideWidth) / 2 * -1);
+            margin-left: calc((var(--testimonialsSliderSlideWidth) / 2) * -1);
+            scrollbar-width: none;
+
         }
 
         &-item {
