--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1219,6 +1219,7 @@ h4, .h4 {
 }
 .testimonials__slider {
   --testimonialsSliderSlideWidth: 606px;
+  overflow: hidden;
 }
 .testimonials__slider-list {
   display: flex;
@@ -1227,6 +1228,7 @@ h4, .h4 {
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   margin-left: calc(var(--testimonialsSliderSlideWidth) / 2 * -1);
+  scrollbar-width: none;
 }
 .testimonials__slider-item {
   scroll-snap-align: start;
